nav links problem of overflow solved on 600px sw

--- a/style.css
+++ b/style.css
@@ -93,15 +93,6 @@ footer{
         display: block;
     }
     #nav-links{
-        display: none;
-    }
-    .collapse-nav{
-        display: flex !important;
-        background-color: white;
-        position: absolute;
-    }
-    #collapse-nav-id{
-        display: flex !important;
-        background-color: white;
+        gap: 1rem;
     }
 }
